# vsn

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: vsn.py
tests/: __init__.py  test_example.py
