[tool.poetry]
name = "vsn"
version = "0.1.0"
description = "Variance Stabilising Normalisation for Python"
authors = ["Sam Ball <stmball@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
